samples/_failures_safe/1761303324_7b4f8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_887aecda.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_887aecda.c:156: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_887aecda.c:155:13: error: expected declaration or statement at end of input
  155 |             if
      |             ^~
./samples/SAFE/__tmp_887aecda.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_887aecda.c:155:13: error: expected declaration or statement at end of input
